# toxicity-analyzer-project

./: .gitignore  Jenkinsfile  README.md  docker-compose.yaml
back/: .env  Dockerfile  app.py  pyproject.toml
back/routes/: analyzer_route.py  e2e_route.py  metrics_route.py
back/services/: constants_service.py  extractor_service.py  monitoring.py  request_service.py
back/tests/: BaseAnalyzerEndpointTest.py  ServerThread.py
back/tests/e2e/: server_launch_config.py
back/tests/integration/: test_analyzer_back_endpoint_identity_attack.py  test_analyzer_back_endpoint_insult.py  test_analyzer_back_endpoint_obscenity.py  test_analyzer_back_endpoint_threat.py  test_analyzer_back_endpoint_toxicity.py  test_analyzer_model_endpoint_400_body.py
back/tests/stress/: locust.conf  locustfile.py  test_stress.py
back/tests/unit/: test_analyzer_input_validity.py
model/: .env  Dockerfile  app.py  pyproject.toml
model/routes/: metrics_route.py  prediction_route.py
model/services/: constants_service.py  extractor_service.py  monitoring.py  request_service.py  response_service.py
model/tests/: BasePredictionEndpointTest.py  ServerThread.py
model/tests/back/: BaseBackTestLaunch.py  conftest.py  launch_back_integration_tests.py  launch_back_stress_tests.py
model/tests/integration/: conftest.py  test_prediction_model_endpoint_400_body.py  test_prediction_model_endpoint_identity_attack.py  test_prediction_model_endpoint_insult.py  test_prediction_model_endpoint_obscenity.py  test_prediction_model_endpoint_threat.py  test_prediction_model_endpoint_toxicity.py
(+39 files in other folders)
